--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <div class="container">
     <!-- required GIPHY attribution-->
-    <img style=float:right; src="assets/images/PoweredBy_200px-White_HorizLogo.png" alt="Powered by GIPHY"></img>
+    <img style="float:right;"  src="assets/images/PoweredBy_200px-White_HorizLogo.png" alt="Powered by GIPHY"></img>
     <h1 style="margin:0;padding:0;float:left;">GIF Search</h1>
     <p class="directions">Click a button below to search for GIFs related to the topic on the button.</p>
     <p class="directions">(Right-click a topic button to remove it.)</p>
@@ -63,7 +63,9 @@
     <!-- div to hold search results-->
     <h3 >Search results</h3>
     <p class="directions">(Double-click a GIF to add it to your favorites.)</p>
-  <div id="results" style="width:100%;border:2px solid blue;padding:5px;">
+    <button id="clearresults">Clear Search results</button>
+  <div id="imgresults" style="width:100%;border:2px solid blue;padding:5px;">
+    
   </div>
 
   <!-- div to hold Favorites -->
