--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>GIF-Tastic: GIF Search App</title>
 
   <!-- linke to styles-->
-  <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
   <!-- link to the jQuery Library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
