--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <!-- required GIPHY attribution-->
     <img style="float:right;"  src="assets/images/PoweredBy_200px-White_HorizLogo.png" alt="Powered by GIPHY"></img>
     <h1 style="margin:0;padding:0;float:left;">GIF Search</h1>
+    <br>
+    <br>
     <p class="directions">Click a button below to search for GIFs related to the topic on the button.</p>
     <p class="directions">(Right-click a topic button to remove it.)</p>
 
@@ -74,5 +76,12 @@
   <p class="directions">(Double-click a GIF to remove it from favorites.)</p>
   <div id="faves" style="width:100%;border:2px solid green;">
   </div>
+
+  <!--audio resources-->
+    <audio id="myAudio">
+    <source>src="assets/sounds/apidone.wav" type="audio/wav">
+  </audio>
+
+  
 </body>
 </html>
